Finalized dark mode Added scrollbar styling Fixed overflow issues on mobile view

--- a/styles-darkmode.css
+++ b/styles-darkmode.css
@@ -84,6 +84,23 @@ body {
   font-family: "Inter", sans-serif;
   background-color: var(--clr-grey-900);
   color: white;
+  overflow-x: hidden;
+}
+
+/* Body Scrollbar */
+body::-webkit-scrollbar {
+  width: 1rem;
+}
+body::-webkit-scrollbar-track {
+  background: var(--clr-grey-700); 
+  border-radius: 1rem;
+}
+body::-webkit-scrollbar-thumb {
+  background: var(--clr-grey-500); 
+  border-radius: 1rem;
+}
+body::-webkit-scrollbar-thumb:hover {
+  background: var(--clr-grey-300); 
 }
 
 /* Navbar */
@@ -273,8 +290,8 @@ body {
 input[type="file"] {
   display: none;
 }
-.song-label a,
-.song-label label {
+.song-label-buttons a,
+.song-label-buttons label {
   font-weight: bold;
   text-decoration: none;
   color: black;
@@ -289,12 +306,20 @@ input[type="file"] {
 .song-label label {
   margin-right: 1rem;
 }
-.song-label a:hover,
-.song-label label:hover {
+.song-label-buttons {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 0.5rem;
+  font-size: 1.5rem;
+}
+
+.song-label-buttons a:hover,
+.song-label-buttonslabel:hover {
   /* border: 2px solid var(--clr-grey-50); */
   filter: saturate(80%);
 }
-.song-label a:active {
+.song-label-buttons a:active {
   background-color: var(--clr-grey-700);
   /* border: 2px solid var(--clr-grey-700); */
   color: var(--clr-grey-100);
@@ -468,6 +493,27 @@ input[type="file"] {
   padding: 0rem 0.5rem;
   overflow: auto;
 }
+
+/* Scrollbars */
+.guitar-tab::-webkit-scrollbar,
+.bass-tab::-webkit-scrollbar {
+  height: 0.75rem;
+}
+.guitar-tab::-webkit-scrollbar-track,
+.bass-tab::-webkit-scrollbar-track {
+  background: var(--clr-grey-700); 
+  border-radius: 1rem;
+}
+.guitar-tab::-webkit-scrollbar-thumb,
+.bass-tab::-webkit-scrollbar-thumb {
+  background: var(--clr-grey-500); 
+  border-radius: 1rem;
+}
+.guitar-tab::-webkit-scrollbar-thumb:hover,
+.bass-tab::-webkit-scrollbar-thumb:hover {
+  background: var(--clr-grey-300); 
+}
+
 .guitar-tab input,
 .bass-tab input {
   width: 1em;
@@ -543,8 +589,9 @@ input[type="file"] {
   right: 0;
   margin: 0 auto;
   display: flex;
+  gap: 1rem;
   flex-direction: column;
-  height: 50%;
+  height: 30%;
   width: 30%;
   background-color: var(--clr-grey-900);
   color: white;
@@ -824,6 +871,21 @@ input[type="range"]:focus::-ms-fill-upper {
     gap: 0.5rem;
   }
 
+  .song-header {
+    display: block;
+  }
+
+  .song-header input {
+    max-width: none;
+  }
+
+  .song-label {
+    margin-top: 0.25rem;
+    margin-bottom: 0.5rem;
+    display: flex;
+    justify-content: space-between;
+  }
+
   .tab-container {
     display: flex;
     gap: 0.25rem;
@@ -835,7 +897,7 @@ input[type="range"]:focus::-ms-fill-upper {
 
   .song-label a,
   .song-label label {
-    font-size: 0.6rem;
+    font-size: 0.75rem;
     padding: 0.25rem 0.5rem;
   }
   .song-label label {
